--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you:
+# If you need help with YAML syntax, here are some quick references for you: 
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -18,21 +18,24 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Peri's
+email: addarrow3@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://pericyan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
-
+  개발 블로그
+# baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://pericyan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: pericyan
+highlighter: rouge
+svg:
+  optimize: true
 # Build settings
-theme: minima
+# theme: minima
+highlighter-theme: monokai
+date_format: "%Y-%M-%D"
 plugins:
   - jekyll-feed
+category_dir: category/
+tag_dir: tag/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
