--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Peri's
 email: addarrow3@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   개발 블로그
-# baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://pericyan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://pericyan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: pericyan
 highlighter: rouge
 svg:
